# hdx-scraper-ecmwf

./: .gitignore  Dockerfile  README.md  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  run.py
.github/workflows/: publish.yaml  run-python-script.yaml
src/hdx/scraper/ecmwf/: __main__.py  pipeline.py
src/hdx/scraper/ecmwf/config/: hdx_dataset_static.yaml  project_configuration.yaml
tests/: conftest.py  test_pipeline.py
tests/fixtures/: anomalous_precipitation_adm0.csv  anomalous_precipitation_adm1.csv  forecast_precipitation_anomalies_adm0.csv  forecast_precipitation_anomalies_adm1.csv  forecast_precipitation_anomalies_adm1_asia.csv  forecast_precipitation_anomalies_adm1_global_3yrs.csv
tests/fixtures/input/: dataset-cod-ab-global.json  dataset-ecmwf-anomalous-precipitation.json  download-anomalous-precipitation-adm0.csv  download-anomalous-precipitation-adm1.csv  download-forecast-precipitation-anomalies-adm0.csv  download-forecast-precipitation-anomalies-adm1-asia.csv  download-forecast-precipitation-anomalies-adm1-global-3yrs.csv  total_precipitation_anomalous_rate_of_accumulation_2025.grib
