#########################
# Project Configuration #
#########################

# Project name and version needed to run tests

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hdx-scraper-ecmwf"
requires-python = ">=3.13"
dependencies = [
  "cdsapi",
  "geopandas",
  "hdx-python-api",
  "hdx-python-country",
  "hdx-python-utilities",
  "xarray",
]

dynamic = ["version"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov"
]
dev = ["pre-commit"]

[project.scripts]
run = "hdx.scraper.ecmwf.__main__:main"
